# arbitrage-monad

./: .gitignore  .gitmodules  CONTRACTS.md  README.md  deployment_output_v3.txt  deployments.md  foundry.toml
arbitrage_monad/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  transactions_monad.md  transactions_monad_Z.md  transactions_monad_archive.md  transactions_monad_before_optimization.md  transactions_monad_deprecated.md  transactions_monad_post_first_optimization.md  transactions_monad_prefinal.md  transactions_monad_quicknode.md
arbitrage_monad/src/: config.rs  main.rs
lib/kuru/: README.md  config.json  crankedOrderBook.json  cranklessOrderBook.json  cranklessOrderBookMargin.json  cranklessStorageOrderBook.json  cranklessStorageOrderBookMargin.json  foundry.toml  hardhat.config.js  output  (+5 more)
script/: AddressConfig.sol  DeployAll.s.sol  DeployArbitrageAUSD.s.sol  DeployArbitrageAUSDUSDC.s.sol  DeployArbitrageGMON.s.sol  DeployArbitragePancake.s.sol  DeployArbitragePancakeWBTC.s.sol  DeployArbitragePcsUni.s.sol  DeployArbitrageTriangle.s.sol  DeployArbitrageTriangleWBTC.s.sol  DeployArbitrageUSDC.s.sol  FindWBTCPools.s.sol  RedeployAUSD.s.sol  VerifyTicks.s.sol
src/: ArbitrageAUSD.sol  ArbitrageAUSDUSDC.sol  ArbitrageGMON.sol  ArbitragePancakeAUSD.sol  ArbitragePancakeUSDC.sol  ArbitragePancakeWBTC.sol  ArbitragePcsUniAUSD.sol  ArbitragePcsUniUSDC.sol  ArbitrageTriangleWBTC.sol  ArbitrageUSDC.sol
test/: GasBenchmark.t.sol  GeneralIntegrationTest.t.sol  LocalIntegrationTest.t.sol  ScenariosBenchmark.t.sol
(+61 files in other folders)
