[package]
name = "arbitrage_monad"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
futures = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

