[package]
name = "arbitrage_monad"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
futures = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"                # For TlsConnector::new()
tokio-native-tls = "0.3"          # For manual TLS with TCP_NODELAY
rustc-hash = "1.1"                # 2x faster hashmaps
tikv-jemallocator = "0.6"
simd-json = "0.14"


[profile.release]
lto = "fat"           # agonizingly slow compile, fastest code
codegen-units = 1     # maximizes optimization (prevents parallel compile)
panic = "abort"       # removes stack unwinding overhead (10-20% binary size reduction)
opt-level = 3         # max optimization